salt/files/os/centos7/iptables-file
# Generated by iptables-save v1.4.21 on Thu Feb 18 18:20:43 2016
*filter
:INPUT ACCEPT [216:17112]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [177:21752]
:LAB-8 - [0:0]
:LAB-9 - [0:0]
-A LAB-8 -p tcp -m tcp --dport 22 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 4505 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 4506 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 53 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 53 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 80 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 443 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 137 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 138 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 139 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 445 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 445 -j ACCEPT
-A LAB-9 -p tcp -m tcp --dport 2049 -j ACCEPT
COMMIT
# Completed on Thu Feb 18 18:20:43 2016
